--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
 		"react-dom": "^18.3.1",
 		"web-vitals": "^2.1.4"
 	},
+	"lint-staged": {
+		"src/**/*.{js,jsx,ts,tsx}": [
+			"eslint --fix",
+			"prettier --write"
+		]
+	},
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
