--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
 	"private": true,
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.7.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"zustand": "^4.5.4"
 	},
 	"lint-staged": {
 		"src/**/*.{js,jsx,ts,tsx}": [
-			"eslint --fix",
-			"prettier --write"
+			"eslint --cache --fix",
+			"prettier --cache --write"
 		]
 	},
 	"scripts": {
@@ -55,6 +57,7 @@
 		"husky": "^9.1.4",
 		"l": "^0.6.0",
 		"lint-staged": "^15.2.7",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.5.4",
 		"typescript-eslint": "^7.16.0",
 		"vite": "^5.3.5"
