--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,13 @@
 {
 	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@apis/*": ["src/apis/*"],
+			"@components/*": ["src/components/*"],
+			"@pages/*": ["src/pages/*"],
+			"@routes/*": ["src/routes/*"]
+		},
+
 		"target": "ES2020",
 		"useDefineForClassFields": true,
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
