--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"axios": "^1.7.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.25.1",
 		"web-vitals": "^2.1.4",
 		"zustand": "^4.5.4"
 	},
