--- a/package.json
+++ b/package.json
@@ -28,8 +28,15 @@
 	"eslintConfig": {
 		"extends": [
 			"react-app",
-			"react-app/jest"
-		]
+			"react-app/jest",
+			"plugin:prettier/recommended"
+		],
+		"plugins": [
+			"prettier"
+		],
+		"rules": {
+			"prettier/prettier": "error"
+		}
 	},
 	"browserslist": {
 		"production": [
@@ -55,6 +62,8 @@
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
 		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
 		"husky": "^9.1.4",
 		"l": "^0.6.0",
 		"lint-staged": "^15.2.7",
