--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"type": "module",
 	"dependencies": {
+		"@tanstack/react-query": "^5.51.16",
 		"axios": "^1.7.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -52,6 +53,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.6.0",
+		"@tanstack/eslint-plugin-query": "^5.51.15",
 		"@testing-library/jest-dom": "^6.4.8",
 		"@testing-library/react": "^16.0.0",
 		"@testing-library/user-event": "^14.5.2",
