--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.6.0",
 		"@tanstack/eslint-plugin-query": "^5.51.15",
+		"@tanstack/react-query-devtools": "^5.51.18",
 		"@testing-library/jest-dom": "^6.4.8",
 		"@testing-library/react": "^16.0.0",
 		"@testing-library/user-event": "^14.5.2",
