--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 			"@apis/*": ["src/apis/*"],
 			"@components/*": ["src/components/*"],
 			"@pages/*": ["src/pages/*"],
-			"@routes/*": ["src/routes/*"]
+			"@routes/*": ["src/routes/*"],
+			"@styles/*": ["src/styles/*"]
 		},
 
 		"target": "ES2020",
@@ -21,6 +22,7 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react-jsx",
+		"jsxImportSource": "@emotion/react",
 
 		/* Linting */
 		"strict": true,
