--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"private": true,
 	"type": "module",
 	"dependencies": {
-		"@emotion/react": "^11.13.0",
 		"@tanstack/react-query": "^5.51.16",
 		"axios": "^1.7.2",
 		"react": "^18.3.1",
@@ -53,6 +52,8 @@
 		]
 	},
 	"devDependencies": {
+		"@emotion/react": "^11.13.0",
+		"@emotion/styled": "^11.13.0",
 		"@eslint/js": "^9.6.0",
 		"@tanstack/eslint-plugin-query": "^5.51.15",
 		"@tanstack/react-query-devtools": "^5.51.18",
