--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
 	"compilerOptions": {
+		"typeRoots": ["src/custom.d.ts"],
+		"types": ["vite/client"],
 		"baseUrl": ".",
 		"paths": {
 			"@apis/*": ["src/apis/*"],
