--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"typeRoots": ["src/custom.d.ts"],
 		"types": ["vite/client"],
-		"baseUrl": ".",
+		"baseUrl": "./",
 		"paths": {
 			"@apis/*": ["src/apis/*"],
 			"@components/*": ["src/components/*"],
